# Protein

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  README.md  build.rs  diesel.toml  docker-compose.yml  example.env  example.protein.yaml  protein.bat  pyproject.toml
.cargo/: config.toml
.github/: CODEOWNERS  CONTRIBUTING.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
migrations/2024-11-20-012236_create_users/: up.sql
scripts/: protein.bat
src/: db.rs  errors.rs  main.rs  schema.rs
src/api/: health.rs  index.rs  mod.rs  system.rs  users.rs
src/cache/: redis.rs
src/fairings/: cors.rs  logging.rs
src/models/: user.rs
src/protein/: app.py
