[project]
name = "Protein"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "xFGhoul", email = "dauntejules9@gmail.com"},
]
dependencies = [
    "fastapi[standard]>=0.115.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
main = "fastapi dev src/protein/app.py"